# nsp-cbf

./: README.md  docker_run.sh  launch.yml  launch_gripper.yml
iiwa_qp/: CMakeLists.txt  package.xml
iiwa_qp/conf/: set_qp.yaml
iiwa_qp/include/iiwa_qp/: QP.h  cbf.h  lbr_iiwa_7_robot.h  qp.h  utilities.hpp
iiwa_qp/launch/: iiwa.launch  iiwa_exp.launch  iiwa_gripper.launch  iiwa_usb_vision.launch  iiwa_v.launch  iiwa_vel_gripper.launch
iiwa_qp/scripts/: spawn_plate.py
iiwa_qp/src/: lbr_iiwa_7_robot.cpp  osqpcontrol.cpp  osqpcontrol_gripper.cpp  osqpcontrol_real.cpp  qpOASES_utils_gripper.hpp  qpOASEScontrol_gripper.cpp  qp_utils.hpp  qp_utils_gripper.hpp
kuka_iiwa_support/conf/: kuka_iiwa_controller.yaml  kuka_iiwa_tau_controller.yaml  kuka_iiwa_vel_controller.yaml
kuka_iiwa_support/launch/: gazebo_ctrl.launch  gazebo_ctrl_camera.launch  gazebo_ctrl_gripper.launch  gazebo_tau_ctrl.launch  gazebo_vel_ctrl.launch
kuka_iiwa_support/rviz/: gripper.rviz
kuka_iiwa_support/urdf/: kuka_iiwa_ctrl.xacro  kuka_iiwa_ctrl_camera.xacro  kuka_iiwa_ctrl_gripper.xacro  kuka_iiwa_macro_ctrl.xacro  kuka_iiwa_macro_ctrl_camera.xacro  kuka_iiwa_macro_ctrl_gripper.xacro  kuka_iiwa_macro_tau_ctrl.xacro  kuka_iiwa_macro_vel_ctrl.xacro  kuka_iiwa_macro_vel_ctrl_gripper.xacro  kuka_iiwa_tau_ctrl.xacro  kuka_iiwa_vel_ctrl.xacro  kuka_iiwa_vel_ctrl_gripper.xacro  plate.xacro
kuka_iiwa_support/world/: floating_marker.world  grasp.world
